--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,77 @@
-altair==4.2.0
-asttokens==2.2.0
-attrs==22.1.0
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-blinker==1.5
-cachetools==5.2.0
-certifi==2022.9.24
-charset-normalizer==2.1.1
-click==8.1.3
-comm==0.1.2
-commonmark==0.9.1
-contourpy==1.0.6
-cycler==0.11.0
-debugpy==1.6.4
+altair==5.4.1
+asttokens==2.4.1
+attrs==24.2.0
+blinker==1.8.2
+branca==0.7.2
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.2
+debugpy==1.8.5
 decorator==5.1.1
-dnspython==2.2.1
-entrypoints==0.4
-executing==1.2.0
-fastjsonschema==2.16.2
-fonttools==4.38.0
-gitdb==4.0.10
-GitPython==3.1.29
-idna==3.4
-importlib-metadata==5.1.0
-importlib-resources==5.10.0
-ipykernel==6.19.2
-ipython==8.7.0
-jedi==0.18.2
-Jinja2==3.1.2
-jsonschema==4.17.1
-jupyter-client==7.4.7
-jupyter-core==5.1.0
-kiwisolver==1.4.4
-MarkupSafe==2.1.1
-matplotlib==3.6.2
-matplotlib-inline==0.1.6
-nbformat==5.7.0
-nest-asyncio==1.5.6
-numpy==1.23.5
-packaging==21.3
-pandas==1.5.2
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.3.0
-pkgutil-resolve-name==1.3.10
-platformdirs==2.5.4
-plotly==5.11.0
-prompt-toolkit==3.0.33
-protobuf==3.20.3
-psutil==5.9.4
+dnspython==2.6.1
+executing==2.1.0
+folium==0.17.0
+geopandas==1.0.1
+gitdb==4.0.11
+GitPython==3.1.43
+idna==3.10
+ipykernel==6.29.5
+ipython==8.27.0
+jedi==0.19.1
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+narwhals==1.8.2
+nest-asyncio==1.6.0
+numpy==2.1.1
+packaging==24.1
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.3.6
+plotly==5.24.1
+prompt_toolkit==3.0.47
+protobuf==5.28.2
+psutil==6.0.0
 ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==10.0.1
-pydeck==0.8.0
-Pygments==2.13.0
-pymongo==4.3.3
-Pympler==1.0.1
-pyparsing==3.0.9
-pyrsistent==0.19.2
-python-dateutil==2.8.2
-pytz==2022.6
-pytz-deprecation-shim==0.1.0.post0
-pyzmq==24.0.1
-requests==2.28.1
-rich==12.6.0
-semver==2.13.0
+pure_eval==0.2.3
+pyarrow==17.0.0
+pydeck==0.9.1
+Pygments==2.18.0
+pymongo==4.9.1
+pyogrio==0.9.0
+pyproj==3.6.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+pyzmq==26.2.0
+referencing==0.35.1
+requests==2.32.3
+rich==13.8.1
+rpds-py==0.20.0
+shapely==2.0.6
 six==1.16.0
-smmap==5.0.0
-stack-data==0.6.2
-streamlit==1.15.1
-streamlit-option-menu==0.3.2
-tenacity==8.1.0
+smmap==5.0.1
+stack-data==0.6.3
+streamlit==1.38.0
+streamlit-option-menu==0.3.13
+streamlit_folium==0.22.1
+tenacity==8.5.0
 toml==0.10.2
-toolz==0.12.0
-tornado==6.2
-traitlets==5.6.0
-typing-extensions==4.4.0
-tzdata==2022.6
-tzlocal==4.2
-urllib3==1.26.13
-validators==0.20.0
-watchdog==2.1.9
-wcwidth==0.2.5
-zipp==3.11.0
+tornado==6.4.1
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.3
+watchdog==4.0.2
+wcwidth==0.2.13
+xyzservices==2024.9.0
